Dynamic Simulation - Remove usage of webflux (#88)