@@ -18,7 +18,9 @@ import com.powsybl.iidm.network.Network;
 import com.powsybl.iidm.network.VariantManagerConstants;
 import com.powsybl.network.store.client.PreloadingStrategy;
 import com.powsybl.timeseries.TimeSeries;
+import com.powsybl.timeseries.TimeSeriesDataType;
 import com.powsybl.timeseries.TimeSeriesMetadata;
+import org.apache.commons.collections4.CollectionUtils;
 import org.gridsuite.ds.server.controller.utils.FileUtils;
 import org.gridsuite.ds.server.controller.utils.ParameterUtils;
 import org.gridsuite.ds.server.dto.DynamicSimulationParametersInfos;
@@ -32,32 +34,33 @@ import org.gridsuite.ds.server.service.contexts.DynamicSimulationResultContext;
 import org.junit.Test;
 import org.mockito.Mockito;
 import org.mockito.invocation.InvocationOnMock;
-import org.mockito.stubbing.Answer;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.cloud.stream.binder.test.InputDestination;
 import org.springframework.cloud.stream.binder.test.OutputDestination;
 import org.springframework.messaging.Message;
-import org.springframework.test.web.reactive.server.EntityExchangeResult;
-import org.springframework.test.web.reactive.server.WebTestClient;
+import org.springframework.test.web.servlet.MockMvc;
+import org.springframework.test.web.servlet.MvcResult;
 import org.springframework.util.StreamUtils;
-import reactor.core.publisher.Mono;
 
-import java.io.*;
+import java.io.IOException;
+import java.io.InputStream;
+import java.io.UncheckedIOException;
 import java.nio.charset.StandardCharsets;
 import java.text.ParseException;
 import java.text.SimpleDateFormat;
 import java.util.*;
-import java.util.stream.Collectors;
 
-import static org.gridsuite.ds.server.service.contexts.DynamicSimulationFailedContext.HEADER_MESSAGE;
-import static org.gridsuite.ds.server.service.contexts.DynamicSimulationFailedContext.HEADER_RESULT_UUID;
-import static org.gridsuite.ds.server.service.contexts.DynamicSimulationFailedContext.HEADER_USER_ID;
+import static org.gridsuite.ds.server.service.contexts.DynamicSimulationFailedContext.*;
 import static org.gridsuite.ds.server.service.notification.NotificationService.FAIL_MESSAGE;
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertTrue;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.BDDMockito.given;
 import static org.mockito.Mockito.doAnswer;
+import static org.springframework.http.MediaType.APPLICATION_JSON;
+import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.delete;
+import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.post;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
 /**
  * @author Thang PHAM <quyet-thang.pham at rte-france.com>
@@ -81,10 +84,10 @@ public class DynamicSimulationControllerIEEE14Test extends AbstractDynamicSimula
     private static final String NETWORK_FILE = "IEEE14.iidm";
     private static final String TEST_EXCEPTION_MESSAGE = "Test exception";
 
-    private final Map<UUID, List<TimeSeries>> timeSeriesMockBd = new HashMap<>();
+    private final Map<UUID, List<TimeSeries<?, ?>>> timeSeriesMockBd = new HashMap<>();
 
     @Autowired
-    private WebTestClient webTestClient;
+    private MockMvc mockMvc;
 
     @Autowired
     private OutputDestination output;
@@ -93,7 +96,7 @@ public class DynamicSimulationControllerIEEE14Test extends AbstractDynamicSimula
     private InputDestination input;
 
     @Autowired
-    private ObjectMapper mapper = new ObjectMapper();
+    private ObjectMapper objectMapper;
 
     private static final String FIXED_DATE = "01/01/2023";
     private final SimpleDateFormat dateFormat = new SimpleDateFormat("dd/MM/yyyy");
@@ -140,7 +143,7 @@ public class DynamicSimulationControllerIEEE14Test extends AbstractDynamicSimula
                     script,
                     dateFormat.parse(FIXED_DATE),
                     parametersFile);
-            given(dynamicMappingClient.createFromMapping(DynamicMappingClientTest.MAPPING_NAME_01)).willReturn(Mono.just(scriptObj));
+            given(dynamicMappingClient.createFromMapping(DynamicMappingClientTest.MAPPING_NAME_01)).willReturn(scriptObj);
         } catch (IOException e) {
             throw new UncheckedIOException(e);
         } catch (ParseException e) {
@@ -150,41 +153,41 @@ public class DynamicSimulationControllerIEEE14Test extends AbstractDynamicSimula
 
     @Override
     protected void initTimeSeriesServiceMock() {
-        Mockito.doAnswer(new Answer<Mono<TimeSeriesGroupInfos>>() {
-            @Override
-            public Mono<TimeSeriesGroupInfos> answer(final InvocationOnMock invocation) {
+        Mockito.doAnswer(invocation -> {
                 final Object[] args = invocation.getArguments();
-                List<TimeSeries> data = (List<TimeSeries>) args[0];
-                UUID seriesUuid = null;
-                if (!data.isEmpty()) {
-                    switch (data.get(0).getMetadata().getDataType()) {
-                        case STRING:
-                            seriesUuid = UUID.fromString(TimeSeriesClientTest.TIME_LINE_UUID);
-                            break;
-                        default:
-                            seriesUuid = UUID.fromString(TimeSeriesClientTest.TIME_SERIES_UUID);
-                            break;
-                    }
-                    timeSeriesMockBd.put(seriesUuid, (List<TimeSeries>) args[0]);
+                List<TimeSeries<?, ?>> data = (List<TimeSeries<?, ?>>) args[0];
+
+                if (CollectionUtils.isEmpty(data)) {
+                    return null;
                 }
-                return Mono.just(new TimeSeriesGroupInfos(seriesUuid));
+
+                UUID seriesUuid;
+                if (Objects.requireNonNull(data.get(0).getMetadata().getDataType()) == TimeSeriesDataType.STRING) {
+                    seriesUuid = TimeSeriesClientTest.TIME_LINE_UUID;
+                } else {
+                    seriesUuid = TimeSeriesClientTest.TIME_SERIES_UUID;
+                }
+                timeSeriesMockBd.put(seriesUuid, (List<TimeSeries<?, ?>>) args[0]);
+                return new TimeSeriesGroupInfos(seriesUuid);
             }
-        }).when(timeSeriesClient).sendTimeSeries(any());
+        ).when(timeSeriesClient).sendTimeSeries(any());
     }
 
     @Override
-    public void tearDown() {
+    public void tearDown() throws Exception {
         super.tearDown();
 
         // delete all results
-        webTestClient.delete()
-                .uri("/v1/results")
-                .exchange()
-                .expectStatus().isOk();
+        mockMvc.perform(
+                delete("/v1/results"))
+            .andExpect(status().isOk());
+
+        // clean fake time-series db
+        timeSeriesMockBd.clear();
     }
 
     @Test
-    public void test01GivenCurvesAndEvents() throws IOException {
+    public void test01GivenCurvesAndEvents() throws Exception {
         String testBaseDir = MAPPING_NAME_01;
 
         // prepare parameters
@@ -202,16 +205,15 @@ public class DynamicSimulationControllerIEEE14Test extends AbstractDynamicSimula
         parameters.setEvents(eventInfosList);
 
         //run the dynamic simulation (on a specific variant with variantId=" + VARIANT_1_ID + ")
-        EntityExchangeResult<UUID> entityExchangeResult = webTestClient.post()
-                .uri("/v1/networks/{networkUuid}/run?" + "&mappingName=" + MAPPING_NAME_01, NETWORK_UUID_STRING)
-                .bodyValue(parameters)
-                .header(HEADER_USER_ID, "testUserId")
-                .exchange()
-                .expectStatus().isOk()
-                .expectBody(UUID.class)
-                .returnResult();
+        MvcResult result = mockMvc.perform(
+                post("/v1/networks/{networkUuid}/run?" + "&mappingName=" + MAPPING_NAME_01, NETWORK_UUID_STRING)
+                        .contentType(APPLICATION_JSON)
+                        .header(HEADER_USER_ID, "testUserId")
+                        .content(objectMapper.writeValueAsString(parameters)))
+                                   .andExpect(status().isOk())
+                                   .andReturn();
 
-        UUID runUuid = UUID.fromString(entityExchangeResult.getResponseBody().toString());
+        UUID runUuid = objectMapper.readValue(result.getResponse().getContentAsString(), UUID.class);
 
         //TODO maybe find a more reliable way to test this : failed with 1000 * 30 timeout
         Message<byte[]> messageSwitch = output.receive(1000 * 40, dsResultDestination);
@@ -219,13 +221,13 @@ public class DynamicSimulationControllerIEEE14Test extends AbstractDynamicSimula
 
         // --- CHECK result at abstract level --- //
         // expected seriesNames
-        List<String> expectedSeriesNames = curveInfosList.stream().map(curveInfos -> curveInfos.getEquipmentId() + "_" + curveInfos.getVariableId()).collect(Collectors.toList());
+        List<String> expectedSeriesNames = curveInfosList.stream().map(curveInfos -> curveInfos.getEquipmentId() + "_" + curveInfos.getVariableId()).toList();
 
         // get timeseries from mock timeseries db
-        UUID timeSeriesUuid = UUID.fromString(TimeSeriesClientTest.TIME_SERIES_UUID);
-        List<TimeSeries> resultTimeSeries = timeSeriesMockBd.remove(timeSeriesUuid);
+        UUID timeSeriesUuid = TimeSeriesClientTest.TIME_SERIES_UUID;
+        List<TimeSeries<?, ?>> resultTimeSeries = timeSeriesMockBd.get(timeSeriesUuid);
         // result seriesNames
-        List<String> seriesNames = resultTimeSeries.stream().map(TimeSeries::getMetadata).map(TimeSeriesMetadata::getName).collect(Collectors.toList());
+        List<String> seriesNames = resultTimeSeries.stream().map(TimeSeries::getMetadata).map(TimeSeriesMetadata::getName).toList();
 
         // compare result only series' names
         expectedSeriesNames.forEach(expectedSeriesName -> {
@@ -248,11 +250,11 @@ public class DynamicSimulationControllerIEEE14Test extends AbstractDynamicSimula
         FileUtils.writeStringToFile(this, outputDir + RESOURCE_PATH_DELIMETER + "exported_" + RESULT_SIM_JSON, jsonResultTimeSeries);
 
         // compare result only timeseries
-        assertEquals(mapper.readTree(jsonExpectedTimeSeries), mapper.readTree(jsonResultTimeSeries));
+        assertEquals(objectMapper.readTree(jsonExpectedTimeSeries), objectMapper.readTree(jsonResultTimeSeries));
     }
 
     @Test
-    public void test01GivenRunWithException() {
+    public void test01GivenRunWithException() throws Exception {
         // setup spy bean
         doAnswer((InvocationOnMock invocation) -> {
             throw new RuntimeException(TEST_EXCEPTION_MESSAGE);
@@ -263,16 +265,15 @@ public class DynamicSimulationControllerIEEE14Test extends AbstractDynamicSimula
         DynamicSimulationParametersInfos parameters = ParameterUtils.getDefaultDynamicSimulationParameters();
 
         //run the dynamic simulation
-        EntityExchangeResult<UUID> entityExchangeResult = webTestClient.post()
-                .uri("/v1/networks/{networkUuid}/run?" + "&mappingName=" + MAPPING_NAME_01, NETWORK_UUID_STRING)
-                .bodyValue(parameters)
-                .header(HEADER_USER_ID, "testUserId")
-                .exchange()
-                .expectStatus().isOk()
-                .expectBody(UUID.class)
-                .returnResult();
+        MvcResult result = mockMvc.perform(
+                        post("/v1/networks/{networkUuid}/run?" + "&mappingName=" + MAPPING_NAME_01, NETWORK_UUID_STRING)
+                                .contentType(APPLICATION_JSON)
+                                .header(HEADER_USER_ID, "testUserId")
+                                .content(objectMapper.writeValueAsString(parameters)))
+                .andExpect(status().isOk())
+                .andReturn();
 
-        UUID runUuid = UUID.fromString(entityExchangeResult.getResponseBody().toString());
+        UUID runUuid = objectMapper.readValue(result.getResponse().getContentAsString(), UUID.class);
 
         // Message failed must be sent
         Message<byte[]> messageSwitch = output.receive(1000 * 5, dsFailedDestination);
